# pinto-rs

./: Cargo.toml  README.md  kernel_link.x  loader_link.ld  qemu_log.txt
.cargo/: config.toml
common/: Cargo.toml
common/src/: lib.rs  port.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: io.rs  main.rs  mem.rs
kernel/src/devices/: mod.rs  timer.rs
kernel/src/mem/: alloc.rs  mod.rs  pages.rs
kernel/src/proc/: process.rs
kernel/src/threads/: interrupt.rs  mod.rs  thread.rs
kernel/src/threads/sync/: mod.rs
kernel/src/utils/: mod.rs
loader/: Cargo.toml  README.md  build.rs
loader/src/: address_packet.rs  boot.s  main.rs
os/: Cargo.toml
runner/: Cargo.toml  README.md
runner/src/: disks.rs  main.rs  run.rs
scripts/: build_x86_64.sh  debug_x86_64.sh  run_x86_64.sh
src/: main.rs
targets/: i386-boot-sector.json  i386-unknown-none.json
