[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader_api = "0.11.0"
uart_16550 = "0.2.18"
spinning_top = "0.2.4"
bitvec = { version = "1.0.1", default-features = false, features = ["atomic"] }
enumflags2 = "0.7.5"
tap = "1.0.1"
x86_64 = { version = "0.14.10", default-features = false, features = ["instructions", "abi_x86_interrupt"] }