#cargo-features = ["build-std=core,alloc,compiler_builtins"]

[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
spinning_top = "0.2.4"
bitvec = { version = "1.0.1", default-features = false, features = ["atomic"] }
enumflags2 = "0.7.5"
tap = "1.0.1"
arrayvec = { version = "0.7.2", default-features = false }
slotmap = { version = "1.0.6", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bitflags = "1.3.2"

[profile.dev]
opt-level = 2
panic = "abort"

[profile.release]
panic = "abort"