[package]
name = "os"
version = "0.1.0"
edition = "2021"

[target.x86_64-pc-windows-msvc.build-dependencies]
bootloader = "0.11.0"
kernel = { path = "../kernel", artifact = "bin", target = "x86_64-pc-windows-msvc" }

[target.x86_64-unknown-none.build-dependencies]
bootloader = "0.11.0"
kernel = { path = "../kernel", artifact = "bin", target = "x86_64-unknown-none" }